--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,93 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
     tools:context=".login.presentation.LoginActivity">
 
-    <LinearLayout
-        android:layout_alignBottom="@id/divider_bottom"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginBottom="36dp">
+        android:layout_gravity="bottom">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/login_image_view_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:paddingStart="80dp"
-            android:paddingEnd="80dp"
-            android:layout_marginBottom="48dp"
-            android:src="@drawable/instagram_logo_black"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/login_edit_text_email"
-            style="@style/InstaFormEditText"
-            android:hint="@string/email"
-            android:inputType="textEmailAddress"   />
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/login_image_view_logo"
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:layout_marginBottom="48dp"
+                android:paddingStart="80dp"
+                android:paddingEnd="80dp"
+                android:src="@drawable/instagram_logo_black" />
 
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/login_edit_text_password"
-            style="@style/InstaFormEditText"
-            android:hint="@string/password"
-            android:inputType="textPassword" />
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/login_edit_text_email_input"
+                style="@style/InstaFormEditTextInput"
+                app:errorTextAppearance="@style/InstaFormEditTextError"
+                app:hintEnabled="false">
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/login_button_enter"
-            style="@style/InstaFormButton"
-            android:text="@string/enter"
-            />
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/login_edit_text_email"
+                    style="@style/InstaFormEditText"
+                    android:hint="@string/email"
+                    android:inputType="textEmailAddress" />
 
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/login_edit_text_password_input"
+                style="@style/InstaFormEditTextInput"
+                app:errorTextAppearance="@style/InstaFormEditTextError"
+                app:hintEnabled="false">
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/login_edit_text_password"
+                    style="@style/InstaFormEditText"
+                    android:hint="@string/password"
+                    android:inputType="textPassword" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/login_button_enter"
+                style="@style/InstaFormButton"
+                android:text="@string/enter" />
+
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <View
+                    style="@style/FormContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_gravity="center"
+                    android:background="@color/colorPrimaryDark" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    style="@style/InstaTextViewBase"
+                    android:layout_gravity="center"
+                    android:padding="8dp"
+                    android:text="@string/or"
+                    android:textStyle="bold" />
+            </FrameLayout>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/login_button_enter_facebook"
+                style="@style/InstaFormButton.Link"
+                android:layout_gravity="center"
+                android:drawableStart="@drawable/facebook_logo"
+                android:drawablePadding="8dp"
+                android:text="@string/enter_with_facebook"
+                android:textAllCaps="false" />
 
             <View
-                style="@style/FormContainer"
+                android:id="@+id/divider_bottom"
                 android:layout_width="match_parent"
-                android:background="@color/colorPrimaryDark"
-                android:layout_gravity="center"
-                android:layout_height="1dp"/>
+                android:layout_height="1dp"
+                android:background="@color/colorPrimaryDark" />
 
             <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/login_text_view_register"
                 style="@style/InstaTextViewBase"
-                android:text="@string/or"
-                android:padding="8dp"
-                android:layout_gravity="center"
-                android:textStyle="bold"
-                />
-        </FrameLayout>
+                android:layout_width="match_parent"
+                android:gravity="center"
+                android:padding="24dp"
+                android:text="@string/does_not_have_account" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/login_button_enter_facebook"
-            style="@style/InstaFormButton.Link"
-            android:layout_gravity="center"
-            android:text="@string/enter_with_facebook"
-            android:drawableStart="@drawable/facebook_logo"
-            android:textAllCaps="false"
-            android:drawablePadding="8dp"
-            />
+        </LinearLayout>
 
-    </LinearLayout>
+    </ScrollView>
 
-    <View
-        android:id="@+id/divider_bottom"
-        android:layout_alignTop="@id/login_text_view_register"
-        android:background="@color/colorPrimaryDark"
-        android:layout_width="match_parent"
-        android:layout_height="1dp" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/login_text_view_register"
-        style="@style/InstaTextViewBase"
-        android:layout_width="match_parent"
-        android:gravity="center"
-        android:layout_alignParentBottom="true"
-        android:padding="24dp"
-        android:text="@string/does_not_have_account"
-        />
-
-</RelativeLayout>
+</LinearLayout>
