--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,13 +4,19 @@
         <item name="android:layout_marginStart">36dp</item>
         <item name="android:layout_marginEnd">36dp</item>
     </style>
-    
-    <style name="InstaFormEditText" parent="FormContainer">
+
+    <style name="InstaFormEditTextInput" parent="FormContainer">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginBottom">20dp</item>
+    </style>
+
+    <style name="InstaFormEditText">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@drawable/edit_text_background</item>
         <item name="android:padding">16dp</item>
-        <item name="android:layout_marginBottom">24dp</item>
+        <item name="android:layout_marginBottom">4dp</item>
     </style>
 
     <style name="InstaFormButton" parent="FormContainer">
@@ -28,7 +34,7 @@
         <item name="android:textStyle">bold</item>
         <item name="android:layout_width">wrap_content</item>
     </style>
-    
+
     <style name="InstaTextViewBase">
         <item name="android:textColor">@color/grayText</item>
         <item name="android:layout_width">wrap_content</item>
@@ -36,5 +42,8 @@
         <item name="android:background">@android:color/white</item>
     </style>
 
+    <style name="InstaFormEditTextError">
+        <item name="android:textColor">@color/red</item>
+    </style>
 
 </resources>
