--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -58,6 +58,7 @@
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/login_button_enter"
                 style="@style/InstaFormButton"
+                android:enabled="false"
                 android:text="@string/enter" />
 
             <FrameLayout
