Criando Fragment para colocar infos

--- a/app/src/main/res/layout/activity_register_email.xml
+++ b/app/src/main/res/layout/activity_register_email.xml
@@ -19,11 +19,12 @@
             android:orientation="vertical">
 
             <fragment
+                android:layout_marginTop="24dp"
                 android:id="@+id/register_fragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:name="com.danielqueiroz.instagramclone.register.presentation.RegisterEmailFragment"
-                tools:layout="@layout/fragment_register_email"/>
+                android:name="com.danielqueiroz.instagramclone.register.presentation.RegisterNamePasswordFragment"
+                tools:layout="@layout/fragment_register_name_password"/>
 
         </LinearLayout>
 
