--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,6 +42,14 @@
         <item name="android:background">@android:color/white</item>
     </style>
 
+    <style name="InstaTextViewBaseForm" parent="FormContainer">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:layout_marginBottom">24dp</item>
+    </style>
+
     <style name="InstaFormEditTextError">
         <item name="android:textColor">@color/red</item>
     </style>
