--- a/app/src/main/res/layout/fragment_register_photo.xml
+++ b/app/src/main/res/layout/fragment_register_photo.xml
@@ -34,5 +34,13 @@
         android:layout_height="wrap_content"
         app:text="@string/add_photo" />
 
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/register_button_jump"
+        style="@style/InstaFormButton.Link"
+        android:layout_gravity="center"
+        android:text="@string/jump"
+        android:layout_marginBottom="36dp"
+        android:layout_marginTop="16dp"
+        />
 
 </LinearLayout>
