--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,6 +50,16 @@
         <item name="android:layout_marginBottom">24dp</item>
     </style>
 
+    <style name="InstaTextViewBaseDialog">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginBottom">12dp</item>
+        <item name="android:layout_marginTop">12dp</item>
+        <item name="android:layout_marginStart">12dp</item>
+        <item name="android:textAlignment">textStart</item>
+    </style>
+
     <style name="InstaFormEditTextError">
         <item name="android:textColor">@color/red</item>
     </style>
