--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -60,6 +60,25 @@
         <item name="android:textAlignment">textStart</item>
     </style>
 
+    <style name="InstaTextView">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="InstaButton">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:background">@drawable/button_background</item>
+    </style>
+
+    <style name="InstaButton.White">
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:background">@drawable/button_white_background</item>
+    </style>
+
+
     <style name="InstaFormEditTextError">
         <item name="android:textColor">@color/red</item>
     </style>
