--- a/app/src/main/res/layout/fragment_register_photo.xml
+++ b/app/src/main/res/layout/fragment_register_photo.xml
@@ -28,7 +28,7 @@
         android:layout_gravity="center"
         />
 
-    <com.danielqueiroz.instagramclone.login.presentation.LoadingButton
+    <com.danielqueiroz.instagramclone.common.view.LoadingButton
         android:id="@+id/register_button_next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
