--- a/app/src/main/res/layout/fragment_register_welcome.xml
+++ b/app/src/main/res/layout/fragment_register_welcome.xml
@@ -14,7 +14,7 @@
         android:text="@string/welcome_to_instagram"
         />
 
-    <com.danielqueiroz.instagramclone.login.presentation.LoadingButton
+    <com.danielqueiroz.instagramclone.common.view.LoadingButton
         android:id="@+id/register_button_next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
