Criando tela de perfil

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,43 @@
     android:layout_height="match_parent"
     tools:context=".main.presentation.MainActivity">
 
-    <fragment
-        android:id="@+id/main_fragment"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="com.danielqueiroz.instagramclone.main.profile.presentation.ProfileFragment"
-        tools:layout="@layout/fragment_main_profile"
-        android:layout_above="@id/main_bottom_nav"/>
+        android:layout_above="@id/main_bottom_nav"
+        >
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <androidx.appcompat.widget.Toolbar
+                android:layout_width="match_parent"
+                app:layout_scrollFlags="scroll"
+                android:layout_height="?attr/actionBarSize"
+                app:title="@string/app_name"
+                />
+
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/white"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:context=".main.presentation.MainActivity">
+
+            <fragment
+                android:id="@+id/main_fragment"
+                android:name="com.danielqueiroz.instagramclone.main.profile.presentation.ProfileFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:layout="@layout/fragment_main_profile" />
+
+        </LinearLayout>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/main_bottom_nav"
@@ -20,11 +50,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@color/colorPrimary"
-        app:itemIconTint="@color/colorAccent"
         app:itemIconSize="28dp"
+        app:itemIconTint="@color/colorAccent"
         app:labelVisibilityMode="unlabeled"
-        app:menu="@menu/menu_bottom_nav"
-        />
-
+        app:menu="@menu/menu_bottom_nav" />
 
 </RelativeLayout>
