Corrigindo estilo de toolbar

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
             <androidx.appcompat.widget.Toolbar
                 android:layout_width="match_parent"
                 app:layout_scrollFlags="scroll"
+                android:background="@color/colorPrimary"
                 android:layout_height="?attr/actionBarSize"
                 app:title="@string/app_name"
                 />
