--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,12 +17,22 @@
             android:layout_height="wrap_content">
 
             <androidx.appcompat.widget.Toolbar
+                android:id="@+id/main_toolbar"
                 android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
                 app:layout_scrollFlags="scroll"
                 android:background="@color/colorPrimary"
-                android:layout_height="?attr/actionBarSize"
-                app:title="@string/app_name"
-                />
+                app:title=" ">
+
+                <ImageView
+                    android:src="@drawable/instagram_logo_black"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:padding="8dp"
+                    android:layout_gravity="start"
+                    />
+            </androidx.appcompat.widget.Toolbar>
 
         </com.google.android.material.appbar.AppBarLayout>
 
@@ -35,10 +45,10 @@
 
             <fragment
                 android:id="@+id/main_fragment"
-                android:name="com.danielqueiroz.instagramclone.main.profile.presentation.ProfileFragment"
+                android:name="com.danielqueiroz.instagramclone.main.home.presentation.HomeFragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:layout="@layout/fragment_main_profile" />
+                tools:layout="@layout/fragment_main_home" />
 
         </LinearLayout>
 
