--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -78,6 +78,11 @@
         <item name="android:background">@drawable/button_white_background</item>
     </style>
 
+    <style name="InstaImageViewPost">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginEnd">16dp</item>
+    </style>
 
     <style name="InstaFormEditTextError">
         <item name="android:textColor">@color/red</item>
