Criando logica para camadas de Fragments

--- a/app/src/main/res/layout/activity_register_email.xml
+++ b/app/src/main/res/layout/activity_register_email.xml
@@ -24,8 +24,8 @@
                 android:id="@+id/register_fragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:name="com.danielqueiroz.instagramclone.register.presentation.RegisterPhotoFragment"
-                tools:layout="@layout/fragment_register_photo"/>
+                android:name="com.danielqueiroz.instagramclone.register.presentation.RegisterEmailFragment"
+                tools:layout="@layout/fragment_register_email"/>
 
         </LinearLayout>
 
