Finalizando implementação de telas 'Fragments'

--- a/app/src/main/res/layout/activity_register_email.xml
+++ b/app/src/main/res/layout/activity_register_email.xml
@@ -19,12 +19,11 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <fragment
+            <FrameLayout
                 android:layout_marginTop="24dp"
                 android:id="@+id/register_fragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:name="com.danielqueiroz.instagramclone.register.presentation.RegisterEmailFragment"
                 tools:layout="@layout/fragment_register_email"/>
 
         </LinearLayout>
