--- a/app/src/main/res/layout/fragment_register_welcome.xml
+++ b/app/src/main/res/layout/fragment_register_welcome.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".register.presentation.RegisterActivity"
-    tools:showIn="@layout/activity_register_email">
+    tools:context=".register.presentation.RegisterActivity">
 
     <TextView
+        android:id="@+id/register_text_view_welcome"
         style="@style/InstaTextViewBaseForm"
         android:layout_gravity="center"
         android:text="@string/welcome_to_instagram"
