--- a/app/src/main/res/layout/fragment_register_email.xml
+++ b/app/src/main/res/layout/fragment_register_email.xml
@@ -29,7 +29,7 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.danielqueiroz.instagramclone.common.view.LoadingButton
+    <com.danielqueiroz.instagramclone.common.component.LoadingButton
         android:id="@+id/register_button_next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
