--- a/app/src/main/res/layout/fragment_register_name_password.xml
+++ b/app/src/main/res/layout/fragment_register_name_password.xml
@@ -47,7 +47,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
 
-    <com.danielqueiroz.instagramclone.common.view.LoadingButton
+    <com.danielqueiroz.instagramclone.common.component.LoadingButton
         android:id="@+id/register_name_button_next"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
