Fazendo navegação entre fragments

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,9 +43,8 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:context=".main.presentation.MainActivity">
 
-            <fragment
+            <FrameLayout
                 android:id="@+id/main_fragment"
-                android:name="com.danielqueiroz.instagramclone.main.camera.presentation.CameraFragment"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:layout="@layout/fragment_main_gallery" />
