--- a/app/src/main/res/layout/fragment_main_camera.xml
+++ b/app/src/main/res/layout/fragment_main_camera.xml
@@ -28,6 +28,7 @@
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:background="@android:color/white"
             android:layout_weight="1">
 
             <androidx.appcompat.widget.AppCompatButton
