--- a/app/src/main/res/layout/fragment_main_gallery.xml
+++ b/app/src/main/res/layout/fragment_main_gallery.xml
@@ -2,6 +2,7 @@
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_gallery_scroll_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -23,6 +24,7 @@
             tools:srcCompat="@tools:sample/backgrounds/scenic"/>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/main_gallery_recycler_view"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
