--- a/app/src/main/res/layout/item_profile_list.xml
+++ b/app/src/main/res/layout/item_profile_list.xml
@@ -18,6 +18,7 @@
         app:layout_constraintTop_toTopOf="parent"
         >
         <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/home_container_user_photo"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:src="@drawable/ic_insta_profile_thin"
@@ -26,6 +27,7 @@
             app:civ_circle_background_color="@color/colorPrimary" />
 
         <TextView
+            android:id="@+id/home_container_username"
             style="@style/InstaTextView"
             android:layout_width="0dp"
             android:layout_gravity="center_vertical"
@@ -46,7 +48,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/red"
-        android:scaleType="center"
+        android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/home_container_user_profile"
@@ -85,10 +87,13 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/home_container_user_caption"
         style="@style/InstaTextView"
         android:text="@string/agree_terms_policy"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:maxLines="3"
+        android:ellipsize="end"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/home_container_user_comment"
