--- a/app/src/main/res/layout/fragment_main_profile.xml
+++ b/app/src/main/res/layout/fragment_main_profile.xml
@@ -115,7 +115,7 @@
             android:layout_height="40dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            android:text="@string/edit_profile"
+            android:text="@string/message"
             app:layout_constraintEnd_toEndOf="@id/profile_text_view_following"
             app:layout_constraintStart_toEndOf="@id/profile_image_icon"
             app:layout_constraintTop_toBottomOf="@id/profile_text_view_following" />
