--- a/app/src/main/res/layout/activity_add_caption.xml
+++ b/app/src/main/res/layout/activity_add_caption.xml
@@ -43,4 +43,13 @@
 
     </LinearLayout>
 
+    <ProgressBar
+        android:id="@+id/add_progress_bar"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        tools:visibility="visible"
+        />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
